Added data validation checks below each applicable code block:
No duplicate observations
No outlier or anomalous values
Correct category levels
Target/response variable follows expected distribution

--- a/crazy_raisins.ipynb
+++ b/crazy_raisins.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "ab10d082",
    "metadata": {
     "scrolled": true
@@ -53,6 +53,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
     "raisin = fetch_ucirepo(id=850)"
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "1bf79cc5",
    "metadata": {},
    "outputs": [],
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "dbe46c7e",
    "metadata": {},
    "outputs": [
@@ -110,12 +111,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "7203cead-8b9e-4e77-9803-26c604e5609a",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Area",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MajorAxisLength",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "MinorAxisLength",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Eccentricity",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "ConvexArea",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Extent",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Perimeter",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "ad4e5bb9-2a14-426a-ab18-239510943c8e",
+       "rows": [
+        [
+         "count",
+         "900.0",
+         "900.0",
+         "900.0",
+         "900.0",
+         "900.0",
+         "900.0",
+         "900.0"
+        ],
+        [
+         "mean",
+         "87804.12777777777",
+         "430.92995049844444",
+         "254.48813290322227",
+         "0.7815421500333333",
+         "91186.09",
+         "0.6995079264077777",
+         "1165.9066355555556"
+        ],
+        [
+         "std",
+         "39002.11139007148",
+         "116.03512062468943",
+         "49.98890170571764",
+         "0.09031840993160666",
+         "40769.29013198777",
+         "0.053468200288159295",
+         "273.7643154160196"
+        ],
+        [
+         "min",
+         "25387.0",
+         "225.629541",
+         "143.7108718",
+         "0.348729642",
+         "26139.0",
+         "0.379856115",
+         "619.074"
+        ],
+        [
+         "25%",
+         "59348.0",
+         "345.44289779999997",
+         "219.111126475",
+         "0.7417662540000001",
+         "61513.25",
+         "0.67086909675",
+         "966.41075"
+        ],
+        [
+         "50%",
+         "78902.0",
+         "407.80395115",
+         "247.84840865",
+         "0.798846044",
+         "81651.0",
+         "0.7073669579999999",
+         "1119.509"
+        ],
+        [
+         "75%",
+         "105028.25",
+         "494.187013975",
+         "279.8885746",
+         "0.84257102375",
+         "108375.75",
+         "0.73499141725",
+         "1308.38975"
+        ],
+        [
+         "max",
+         "235047.0",
+         "997.2919406",
+         "492.2752785",
+         "0.96212444",
+         "278217.0",
+         "0.835454545",
+         "2697.753"
+        ]
+       ],
+       "shape": {
+        "columns": 7,
+        "rows": 8
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -251,7 +383,7 @@
        "max    278217.000000    0.835455  2697.753000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +402,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
+   "id": "f23bc205",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No duplicate observations found in the dataset.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for duplicate observations in the dataset\n",
+    "duplicates = X.duplicated().sum()\n",
+    "if duplicates > 0:\n",
+    "    raise ValueError(f\"Dataset contains {duplicates} duplicate observations.\")\n",
+    "else:\n",
+    "    print(\"No duplicate observations found in the dataset.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "8a894c44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if data is within reasonable ranges\n",
+    "columns_to_check = {'Area': (25380, 235050),\n",
+    "    'MajorAxisLength': (223, 1000),\n",
+    "    'MinorAxisLength': (140, 495),\n",
+    "    'Eccentricity': (0.348, 0.9622),\n",
+    "    'ConvexArea': (26138, 278218),\n",
+    "    'Extent': (0.379, 0.836),\n",
+    "    'Perimeter': (619, 2698)}\n",
+    "for column, (min_val, max_val) in columns_to_check.items():\n",
+    "    if not X[column].between(min_val, max_val).all():\n",
+    "        raise ValueError(f\"Values in column '{column}' are out of expected range.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "c34fd20b",
    "metadata": {},
    "outputs": [
@@ -279,23 +454,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-795e3d71e2b441829023b290d4a9b7de.vega-embed {\n",
+       "  #altair-viz-f6ee255154854bb6b334a52ab3f9cf1f.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-795e3d71e2b441829023b290d4a9b7de.vega-embed details,\n",
-       "  #altair-viz-795e3d71e2b441829023b290d4a9b7de.vega-embed details summary {\n",
+       "  #altair-viz-f6ee255154854bb6b334a52ab3f9cf1f.vega-embed details,\n",
+       "  #altair-viz-f6ee255154854bb6b334a52ab3f9cf1f.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-795e3d71e2b441829023b290d4a9b7de\"></div>\n",
+       "<div id=\"altair-viz-f6ee255154854bb6b334a52ab3f9cf1f\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-795e3d71e2b441829023b290d4a9b7de\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-795e3d71e2b441829023b290d4a9b7de\");\n",
+       "    if (outputDiv.id !== \"altair-viz-f6ee255154854bb6b334a52ab3f9cf1f\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-f6ee255154854bb6b334a52ab3f9cf1f\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -350,7 +525,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "a6f4936a",
    "metadata": {},
    "outputs": [
@@ -388,23 +563,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-a56f953b3cbd4eeb8364826752ca3117.vega-embed {\n",
+       "  #altair-viz-8397aa8a879b4b21b49ad2549aed981a.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-a56f953b3cbd4eeb8364826752ca3117.vega-embed details,\n",
-       "  #altair-viz-a56f953b3cbd4eeb8364826752ca3117.vega-embed details summary {\n",
+       "  #altair-viz-8397aa8a879b4b21b49ad2549aed981a.vega-embed details,\n",
+       "  #altair-viz-8397aa8a879b4b21b49ad2549aed981a.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-a56f953b3cbd4eeb8364826752ca3117\"></div>\n",
+       "<div id=\"altair-viz-8397aa8a879b4b21b49ad2549aed981a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-a56f953b3cbd4eeb8364826752ca3117\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-a56f953b3cbd4eeb8364826752ca3117\");\n",
+       "    if (outputDiv.id !== \"altair-viz-8397aa8a879b4b21b49ad2549aed981a\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-8397aa8a879b4b21b49ad2549aed981a\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -459,7 +634,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "10f7da17",
    "metadata": {},
    "outputs": [],
@@ -522,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "9b3a4417",
    "metadata": {},
    "outputs": [
@@ -958,7 +1133,7 @@
        "LogisticRegression(max_iter=2000)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "id": "3758bf11",
    "metadata": {},
    "outputs": [
@@ -980,7 +1155,7 @@
        "0.8755555555555555"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "id": "beaa75fa",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1188,7 @@
        "       [  9, 106]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1044,7 +1219,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "9779fe24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check target/response variable follows expected distribution\n",
+    "class_counts = y.value_counts()\n",
+    "expected_distribution = {'Kecimen': 450, 'Besni': 450}\n",
+    "for class_label, expected_count in expected_distribution.items():\n",
+    "    actual_count = class_counts.get(class_label, 0)\n",
+    "    if actual_count != expected_count:\n",
+    "        raise ValueError(f\"Class '{class_label}' has {actual_count} instances; expected {expected_count}.\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "id": "3ef96038",
    "metadata": {},
    "outputs": [
@@ -1054,7 +1246,7 @@
        "0.8751851851851853"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "id": "2809afbe",
    "metadata": {},
    "outputs": [],
