Handled datatypeconversion error during fitting by converting y to an 1D array.

--- a/crazy_raisins.ipynb
+++ b/crazy_raisins.ipynb
@@ -160,7 +160,7 @@
          "type": "float"
         }
        ],
-       "ref": "dcd9627d-3ff8-4689-b7f3-9670fa2540d9",
+       "ref": "383e4be7-500b-40fa-ba8f-0569356abf16",
        "rows": [
         [
          "count",
@@ -454,23 +454,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-622c83f75eaf41048c7151dcaa818b1e.vega-embed {\n",
+       "  #altair-viz-8e47de6aa585460f85767b4255482da1.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-622c83f75eaf41048c7151dcaa818b1e.vega-embed details,\n",
-       "  #altair-viz-622c83f75eaf41048c7151dcaa818b1e.vega-embed details summary {\n",
+       "  #altair-viz-8e47de6aa585460f85767b4255482da1.vega-embed details,\n",
+       "  #altair-viz-8e47de6aa585460f85767b4255482da1.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-622c83f75eaf41048c7151dcaa818b1e\"></div>\n",
+       "<div id=\"altair-viz-8e47de6aa585460f85767b4255482da1\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-622c83f75eaf41048c7151dcaa818b1e\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-622c83f75eaf41048c7151dcaa818b1e\");\n",
+       "    if (outputDiv.id !== \"altair-viz-8e47de6aa585460f85767b4255482da1\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-8e47de6aa585460f85767b4255482da1\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -563,23 +563,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-3f0c3e53804c415cbde16a8e2777995c.vega-embed {\n",
+       "  #altair-viz-7d70d4955f3e4121839371cde187718e.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-3f0c3e53804c415cbde16a8e2777995c.vega-embed details,\n",
-       "  #altair-viz-3f0c3e53804c415cbde16a8e2777995c.vega-embed details summary {\n",
+       "  #altair-viz-7d70d4955f3e4121839371cde187718e.vega-embed details,\n",
+       "  #altair-viz-7d70d4955f3e4121839371cde187718e.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-3f0c3e53804c415cbde16a8e2777995c\"></div>\n",
+       "<div id=\"altair-viz-7d70d4955f3e4121839371cde187718e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3f0c3e53804c415cbde16a8e2777995c\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3f0c3e53804c415cbde16a8e2777995c\");\n",
+       "    if (outputDiv.id !== \"altair-viz-7d70d4955f3e4121839371cde187718e\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-7d70d4955f3e4121839371cde187718e\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -746,11 +746,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "10f7da17",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Added conversion of y to numpy array to avoid warning when fitting model\n",
+    "y = np.array(y['Class'])\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 123)"
    ]
   },
@@ -760,14 +762,6 @@
    "id": "9b3a4417",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\eric_\\miniforge3\\envs\\craisins\\lib\\site-packages\\sklearn\\utils\\validation.py:1408: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1281,7 +1275,19 @@
    "execution_count": 15,
    "id": "9779fe24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'value_counts'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Check target/response variable follows expected distribution\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m class_counts \u001b[38;5;241m=\u001b[39m \u001b[43my\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalue_counts\u001b[49m()\n\u001b[0;32m      3\u001b[0m expected_distribution \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mKecimen\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m450\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBesni\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m450\u001b[39m}\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m class_label, expected_count \u001b[38;5;129;01min\u001b[39;00m expected_distribution\u001b[38;5;241m.\u001b[39mitems():\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'value_counts'"
+     ]
+    }
+   ],
    "source": [
     "# Check target/response variable follows expected distribution\n",
     "class_counts = y.value_counts()\n",
@@ -1295,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "3ef96038",
    "metadata": {},
    "outputs": [
@@ -1319,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "2809afbe",
    "metadata": {},
    "outputs": [],
