--- a/crazy_raisins.ipynb
+++ b/crazy_raisins.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ab10d082",
    "metadata": {
     "scrolled": true
@@ -54,6 +54,9 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandera as pa\n",
+    "from pandera import Column, Check, DataFrameSchema\n",
+    "\n",
     "\n",
     "\n",
     "raisin = fetch_ucirepo(id=850)"
@@ -61,7 +64,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
+   "id": "7edb0609",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Area</th>\n",
+       "      <th>MajorAxisLength</th>\n",
+       "      <th>MinorAxisLength</th>\n",
+       "      <th>Eccentricity</th>\n",
+       "      <th>ConvexArea</th>\n",
+       "      <th>Extent</th>\n",
+       "      <th>Perimeter</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>87524.0</td>\n",
+       "      <td>442.246011</td>\n",
+       "      <td>253.291155</td>\n",
+       "      <td>0.819738</td>\n",
+       "      <td>90546.0</td>\n",
+       "      <td>0.758651</td>\n",
+       "      <td>1184.040</td>\n",
+       "      <td>Kecimen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>75166.0</td>\n",
+       "      <td>406.690687</td>\n",
+       "      <td>243.032436</td>\n",
+       "      <td>0.801805</td>\n",
+       "      <td>78789.0</td>\n",
+       "      <td>0.684130</td>\n",
+       "      <td>1121.786</td>\n",
+       "      <td>Kecimen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90856.0</td>\n",
+       "      <td>442.267048</td>\n",
+       "      <td>266.328318</td>\n",
+       "      <td>0.798354</td>\n",
+       "      <td>93717.0</td>\n",
+       "      <td>0.637613</td>\n",
+       "      <td>1208.575</td>\n",
+       "      <td>Kecimen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45928.0</td>\n",
+       "      <td>286.540559</td>\n",
+       "      <td>208.760042</td>\n",
+       "      <td>0.684989</td>\n",
+       "      <td>47336.0</td>\n",
+       "      <td>0.699599</td>\n",
+       "      <td>844.162</td>\n",
+       "      <td>Kecimen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>79408.0</td>\n",
+       "      <td>352.190770</td>\n",
+       "      <td>290.827533</td>\n",
+       "      <td>0.564011</td>\n",
+       "      <td>81463.0</td>\n",
+       "      <td>0.792772</td>\n",
+       "      <td>1073.251</td>\n",
+       "      <td>Kecimen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>895</th>\n",
+       "      <td>83248.0</td>\n",
+       "      <td>430.077308</td>\n",
+       "      <td>247.838695</td>\n",
+       "      <td>0.817263</td>\n",
+       "      <td>85839.0</td>\n",
+       "      <td>0.668793</td>\n",
+       "      <td>1129.072</td>\n",
+       "      <td>Besni</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>896</th>\n",
+       "      <td>87350.0</td>\n",
+       "      <td>440.735698</td>\n",
+       "      <td>259.293149</td>\n",
+       "      <td>0.808629</td>\n",
+       "      <td>90899.0</td>\n",
+       "      <td>0.636476</td>\n",
+       "      <td>1214.252</td>\n",
+       "      <td>Besni</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>897</th>\n",
+       "      <td>99657.0</td>\n",
+       "      <td>431.706981</td>\n",
+       "      <td>298.837323</td>\n",
+       "      <td>0.721684</td>\n",
+       "      <td>106264.0</td>\n",
+       "      <td>0.741099</td>\n",
+       "      <td>1292.828</td>\n",
+       "      <td>Besni</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>898</th>\n",
+       "      <td>93523.0</td>\n",
+       "      <td>476.344094</td>\n",
+       "      <td>254.176054</td>\n",
+       "      <td>0.845739</td>\n",
+       "      <td>97653.0</td>\n",
+       "      <td>0.658798</td>\n",
+       "      <td>1258.548</td>\n",
+       "      <td>Besni</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>899</th>\n",
+       "      <td>85609.0</td>\n",
+       "      <td>512.081774</td>\n",
+       "      <td>215.271976</td>\n",
+       "      <td>0.907345</td>\n",
+       "      <td>89197.0</td>\n",
+       "      <td>0.632020</td>\n",
+       "      <td>1272.862</td>\n",
+       "      <td>Besni</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>900 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Area  MajorAxisLength  MinorAxisLength  Eccentricity  ConvexArea  \\\n",
+       "0    87524.0       442.246011       253.291155      0.819738     90546.0   \n",
+       "1    75166.0       406.690687       243.032436      0.801805     78789.0   \n",
+       "2    90856.0       442.267048       266.328318      0.798354     93717.0   \n",
+       "3    45928.0       286.540559       208.760042      0.684989     47336.0   \n",
+       "4    79408.0       352.190770       290.827533      0.564011     81463.0   \n",
+       "..       ...              ...              ...           ...         ...   \n",
+       "895  83248.0       430.077308       247.838695      0.817263     85839.0   \n",
+       "896  87350.0       440.735698       259.293149      0.808629     90899.0   \n",
+       "897  99657.0       431.706981       298.837323      0.721684    106264.0   \n",
+       "898  93523.0       476.344094       254.176054      0.845739     97653.0   \n",
+       "899  85609.0       512.081774       215.271976      0.907345     89197.0   \n",
+       "\n",
+       "       Extent  Perimeter    Class  \n",
+       "0    0.758651   1184.040  Kecimen  \n",
+       "1    0.684130   1121.786  Kecimen  \n",
+       "2    0.637613   1208.575  Kecimen  \n",
+       "3    0.699599    844.162  Kecimen  \n",
+       "4    0.792772   1073.251  Kecimen  \n",
+       "..        ...        ...      ...  \n",
+       "895  0.668793   1129.072    Besni  \n",
+       "896  0.636476   1214.252    Besni  \n",
+       "897  0.741099   1292.828    Besni  \n",
+       "898  0.658798   1258.548    Besni  \n",
+       "899  0.632020   1272.862    Besni  \n",
+       "\n",
+       "[900 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.concat([raisin.data.features, raisin.data.targets], axis=1)\n",
+    "df[\"Area\"] = df[\"Area\"].astype(float)\n",
+    "df[\"ConvexArea\"] = df[\"ConvexArea\"].astype(float)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "1bf79cc5",
    "metadata": {},
    "outputs": [],
@@ -72,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "dbe46c7e",
    "metadata": {},
    "outputs": [
@@ -111,143 +320,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "7203cead-8b9e-4e77-9803-26c604e5609a",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Area",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "MajorAxisLength",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "MinorAxisLength",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Eccentricity",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "ConvexArea",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Extent",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Perimeter",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "383e4be7-500b-40fa-ba8f-0569356abf16",
-       "rows": [
-        [
-         "count",
-         "900.0",
-         "900.0",
-         "900.0",
-         "900.0",
-         "900.0",
-         "900.0",
-         "900.0"
-        ],
-        [
-         "mean",
-         "87804.12777777777",
-         "430.92995049844444",
-         "254.48813290322227",
-         "0.7815421500333333",
-         "91186.09",
-         "0.6995079264077777",
-         "1165.9066355555556"
-        ],
-        [
-         "std",
-         "39002.11139007148",
-         "116.03512062468943",
-         "49.98890170571764",
-         "0.09031840993160666",
-         "40769.29013198777",
-         "0.053468200288159295",
-         "273.7643154160196"
-        ],
-        [
-         "min",
-         "25387.0",
-         "225.629541",
-         "143.7108718",
-         "0.348729642",
-         "26139.0",
-         "0.379856115",
-         "619.074"
-        ],
-        [
-         "25%",
-         "59348.0",
-         "345.44289779999997",
-         "219.111126475",
-         "0.7417662540000001",
-         "61513.25",
-         "0.67086909675",
-         "966.41075"
-        ],
-        [
-         "50%",
-         "78902.0",
-         "407.80395115",
-         "247.84840865",
-         "0.798846044",
-         "81651.0",
-         "0.7073669579999999",
-         "1119.509"
-        ],
-        [
-         "75%",
-         "105028.25",
-         "494.187013975",
-         "279.8885746",
-         "0.84257102375",
-         "108375.75",
-         "0.73499141725",
-         "1308.38975"
-        ],
-        [
-         "max",
-         "235047.0",
-         "997.2919406",
-         "492.2752785",
-         "0.96212444",
-         "278217.0",
-         "0.835454545",
-         "2697.753"
-        ]
-       ],
-       "shape": {
-        "columns": 7,
-        "rows": 8
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -383,7 +461,7 @@
        "max    278217.000000    0.835455  2697.753000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,6 +476,163 @@
    "metadata": {},
    "source": [
     "*Fig. 2 Statistical overview of the numerical features to determine if any preprocessing is required. Initial thoughts are to use StandardScaler()*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "529792cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct file format: CSV.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# validating correct file format (CSV)\n",
+    "\n",
+    "file_path = \"data/raisin.csv\"\n",
+    "\n",
+    "if file_path.lower().endswith(\".csv\"):\n",
+    "    print(\"Correct file format\")\n",
+    "else:\n",
+    "    print(\"Incorrect file format\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87e8c04e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column names are correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "# validating column names\n",
+    "\n",
+    "expected_cols = [\n",
+    "    \"Area\", \"MajorAxisLength\", \"MinorAxisLength\", \n",
+    "    \"Eccentricity\", \"ConvexArea\", \"Extent\", \"Perimeter\", \"Class\"\n",
+    "]\n",
+    "\n",
+    "if set(df.columns) == set(expected_cols):\n",
+    "    print(\"Column names are correct\")\n",
+    "else:\n",
+    "    print(\"Column names incorrect\")\n",
+    "    print(\"Expected:\", expected_cols)\n",
+    "    print(\"Found:\", list(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc938840",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# checking for empty observations, making sure it does exceed a certain limit (differs for each limit)\n",
+    "\n",
+    "raisin_schema = pa.DataFrameSchema(\n",
+    "    {\n",
+    "        \"Area\": pa.Column(float, pa.Check.between(5, 45), nullable=True),\n",
+    "        \"MajorAxisLength\": pa.Column(float, pa.Check.between(5, 45), nullable=True),\n",
+    "        \"MinorAxisLength\": pa.Column(float, pa.Check.between(5, 45), nullable=True),\n",
+    "        \"Eccentricity\": pa.Column(float, pa.Check.between(0, 1), nullable=True), \n",
+    "        \"ConvexArea\": pa.Column(float, pa.Check.between(5, 1000), nullable=True),\n",
+    "        \"Extent\": pa.Column(float, pa.Check.between(0, 1), nullable=True),\n",
+    "        \"Perimeter\": pa.Column(float, pa.Check.between(5, 500), nullable=True),\n",
+    "        \"Class\": pa.Column(str, pa.Check.isin([\"Kecimen\", \"Besni\"]))\n",
+    "    },\n",
+    "    checks=[\n",
+    "        pa.Check(lambda df: ~df.duplicated().any(), error=\"Duplicate rows found.\"),\n",
+    "        pa.Check(lambda df: ~(df.isna().all(axis=1)).any(), error=\"Empty rows found.\")\n",
+    "    ]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16d80c76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# validating correct data types\n",
+    "\n",
+    "schema = pa.DataFrameSchema({\n",
+    "        \"Area\": pa.Column(float),\n",
+    "        \"MajorAxisLength\": pa.Column(float),\n",
+    "        \"MinorAxisLength\": pa.Column(float),\n",
+    "        \"Eccentricity\": pa.Column(float),\n",
+    "        \"ConvexArea\": pa.Column(float),\n",
+    "        \"Extent\": pa.Column(float), \n",
+    "        \"Perimeter\": pa.Column(float),\n",
+    "        \"Class\": pa.Column(str)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8c6be9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# validating missingness/null values of each column, making sure its below 5%\n",
+    "\n",
+    "raisin_schema = pa.DataFrameSchema(\n",
+    "    {\n",
+    "        \"Area\": pa.Column(\n",
+    "            float,\n",
+    "            pa.Check(\n",
+    "                lambda s: s.isna().mean() <= 0.05,\n",
+    "                element_wise=False,\n",
+    "                error=\"Too many null values in 'Area' column.\"),\n",
+    "            nullable=True),\n",
+    "        \"MajorAxisLength\": pa.Column(\n",
+    "            float,\n",
+    "            pa.Check(\n",
+    "                lambda s: s.isna().mean() <= 0.05,\n",
+    "                element_wise=False,\n",
+    "                error=\"Too many null values in 'MajorAxisLength' column.\"),\n",
+    "            nullable=True),\n",
+    "        \"MinorAxisLength\": pa.Column(\n",
+    "            float,\n",
+    "            pa.Check(\n",
+    "                lambda s: s.isna().mean() <= 0.05,\n",
+    "                element_wise=False,\n",
+    "                error=\"Too many null values in 'MinorAxisLength' column.\"),\n",
+    "            nullable=True),\n",
+    "        \"Eccentricity\": pa.Column(float, nullable=True),\n",
+    "        \"ConvexArea\": pa.Column(\n",
+    "            float,\n",
+    "            pa.Check(\n",
+    "                lambda s: s.isna().mean() <= 0.05,\n",
+    "                element_wise=False,\n",
+    "                error=\"Too many null values in 'ConvexArea' column.\"),\n",
+    "            nullable=True),\n",
+    "        \"Extent\": pa.Column(float, nullable=True),\n",
+    "        \"Perimeter\": pa.Column(\n",
+    "            float,\n",
+    "            pa.Check(\n",
+    "                lambda s: s.isna().mean() <= 0.05,\n",
+    "                element_wise=False,\n",
+    "                error=\"Too many null values in 'Perimeter' column.\"),\n",
+    "            nullable=True),\n",
+    "        \"Class\": pa.Column(\n",
+    "            str,\n",
+    "            pa.Check.isin([\"Kecimen\", \"Besni\"]))\n",
+    "    }\n",
+    ")"
    ]
   },
   {
